--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(to bottom, #1c3648, #174861);
+
 }
 
 code {
@@ -23,9 +23,67 @@ code {
 
 }
 
-/* .hero-section {
-  background-image: linear-gradient(to bottom, #1c3648, #174861);
+.hero-section,
+.statistics-bg {
+  /* background-image: linear-gradient(to bottom, #1c3648, #174861); */
+  background-image: linear-gradient(to right, #1f2658, #272e5d);
   height: fit-content;
   background-size: cover;
   background-position: center center;
-} */
+  border-radius: 100% 100% 50 0 / 100% 50% 100% 0;
+  position: relative;
+
+}
+
+
+.hero-section::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-repeat: repeat;
+  height: 10px;
+  background-size: 20px 20px;
+  background-image:
+    radial-gradient(circle at 10px -5px, transparent 12px, #fff 13px);
+}
+
+.hero-section::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-repeat: repeat;
+  height: 15px;
+  background-size: 40px 20px;
+  background-image:
+    radial-gradient(circle at 10px 15px, #ffff 12px, transparent 13px);
+}
+
+.statistics-bg::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -8px;
+  right: 0;
+  background-repeat: repeat;
+  height: 10px;
+  background-size: 20px 20px;
+  background-image:
+    radial-gradient(circle at 10px -5px, transparent 12px, #fff 13px);
+}
+
+.statistics-bg::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -8px;
+  right: 0;
+  background-repeat: repeat;
+  height: 15px;
+  background-size: 40px 20px;
+  background-image:
+    radial-gradient(circle at 10px 15px, #272e5d 12px, transparent 13px);
+}
