--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@ body {
 
 }
 
+/* css debugger */
+/*  {
+  border: 1px solid red
+} */
+
+/* end */
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
